# FullStackAutoQuant

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: task_rendered.yaml  trading.yaml  trading.yaml.example
configs/schema/: backtest.schema.json  model_inference.schema.json  trading.schema.json
css/: components.css
dashboard/: index.html
dashboard/css/: animations.css  components.css  hero.css  layout.css  variables.css
dashboard/data/: dashboard_data.json
dashboard/data/meta/: system_info.json  trading_config.json
dashboard/data/performance/: equity_curve.json
dashboard/data/signals/history/: signals_2026-04-03.json  signals_2026-04-08.json  signals_2026-04-09.json  signals_2026-04-10.json  signals_2026-04-13.json
dashboard/data/trading/: execution_history.json  latest_targets.json
dashboard/js/: charts.js  renderers.js
data/: dashboard_data.json
data/data/performance/: equity_curve.json  summary.json
data/data/risk/: confidence_distribution.json
data/data/signals/history/: signals_2026-04-07.json
data/performance/: daily_stats.json  equity_curve.json  summary.json
data/risk/: confidence_distribution.json  latest.json
data/signals/: latest.json
data/signals/history/: signals_2026-04-09.json  signals_2026-04-10.json  signals_2026-04-13.json  signals_2026-04-14.json  signals_2026-04-15.json  signals_2026-04-16.json  signals_2026-04-17.json  signals_2026-04-20.json  signals_2026-04-21.json  signals_2026-04-22.json  signals_2026-04-23.json  signals_2026-04-24.json  signals_2026-04-27.json  signals_2026-04-28.json  signals_2026-04-29.json  signals_2026-04-30.json  signals_2026-05-01.json  signals_2026-05-04.json  signals_2026-05-06.json  signals_2026-05-07.json  signals_2026-05-08.json  signals_2026-05-11.json  signals_2026-05-12.json  signals_2026-05-13.json  signals_2026-05-14.json  signals_2026-05-15.json  signals_2026-05-18.json  signals_2026-05-19.json  signals_2026-05-20.json  signals_2026-05-21.json  signals_2026-05-22.json  signals_2026-05-25.json  signals_2026-05-26.json  signals_2026-05-27.json  signals_2026-05-28.json  signals_2026-05-29.json  signals_2026-06-01.json  signals_2026-06-02.json  signals_2026-06-03.json  signals_2026-06-04.json  (+6 more)
data/trading/: execution_history.json  latest_orders.json  latest_targets.json
docs/: architecture.md  data_pipeline.md  deployment.md  normalizer_caching.md  trading_system.md
docs/site/: index.html
docs/site/css/: reset.css
docs/site/data/data/: dashboard_data.json
docs/site/js/: charts.js
fullstackautoquant/: __init__.py  logging_config.py  resilience.py
fullstackautoquant/backtest/: __init__.py  config.py  engine.py  metrics.py  pipeline.py  qlib_adapter.py  run_backtest.py  storage.py  utils.py
fullstackautoquant/backtest/components/: __init__.py  execution.py  nav_tracker.py  records.py  risk_evaluator.py  signal_provider.py  strategy_runner.py
fullstackautoquant/data/: __init__.py  build_features.py  export_daily_pv.py  factor_synthesis.py  qlib_update.sh  tushare_provider.py
fullstackautoquant/data/verify/: __init__.py  verify_daily_pv_h5.py  verify_parquet_ready_for_infer.py
fullstackautoquant/model/: __init__.py  architecture.py  inference.py  model.py  norm_cache.py  scoring.py  task_config.py
fullstackautoquant/model/archive/: __init__.py  writers.py
fullstackautoquant/model/io/: __init__.py  data_loader.py
fullstackautoquant/trading/: __init__.py  execution.py  run_once.py  scheduler.py  signals.py  strategy.py  utils.py
fullstackautoquant/trading/manual_workflow/: __init__.py  simulator.py
fullstackautoquant/trading/risk/: manager.py  service.py
fullstackautoquant/trading/signals/: __init__.py  parser.py  schema.py
fullstackautoquant/webui/: __init__.py  requirements.txt
fullstackautoquant/webui/app/: config_loader.py  database.py  inference_runner.py  initialize_db.py  manual_decisions.py  market_data.py  plan_generator.py  positions_apply.py  quotes.py  risk_reader.py  strategy_reader.py  streamlit_app.py  ui_apply_plan.py  workflow.py
js/: app.js  charts.js  data-loader.js  renderers.js
output/: ranked_scores.csv
output/history/: ranked_scores_2026-04-07.csv  ranked_scores_2026-04-09.csv  ranked_scores_2026-04-10.csv  ranked_scores_2026-04-13.csv  ranked_scores_2026-04-14.csv  ranked_scores_2026-04-15.csv  ranked_scores_2026-04-16.csv  ranked_scores_2026-04-17.csv  ranked_scores_2026-04-20.csv  ranked_scores_2026-04-21.csv  ranked_scores_2026-04-22.csv  ranked_scores_2026-04-23.csv  ranked_scores_2026-04-27.csv  ranked_scores_2026-04-28.csv  ranked_scores_2026-04-30.csv  ranked_scores_2026-05-01.csv  ranked_scores_2026-05-04.csv  ranked_scores_2026-05-06.csv  ranked_scores_2026-05-07.csv  ranked_scores_2026-05-08.csv
scripts/: build_full_history.py  check_trading_day.py  deploy.sh  deploy_dashboard.sh  export_dashboard_data.py  extract_norm_cache.py  push_csv_to_repo.sh  run_daily.sh  run_daily_lite.py  run_full_pipeline.sh  run_full_workflow.sh  run_inference.sh  run_inference_lite.py  run_lite_workflow.sh  run_trading.sh  run_trading_once.py  snapshot_portfolio.py
scripts/dashboard_export/: __init__.py  assembler.py  confidence.py  constants.py  health.py  metadata.py  performance.py  portfolio.py  scores.py  trading.py  trading_calendar.py  writer.py
tests/: test_archiver.py  test_backtest_engine.py  test_backtest_utils_metrics_config.py  test_backward_adjustment_live.py  test_components_storage.py  test_data_loader.py  test_logging_and_resilience.py  test_model_risk_strategy.py  test_norm_cache.py  test_output_stability.py  test_parser.py  test_pipeline.py  test_pipeline_integration.py  test_records_risk_helpers.py  test_scoring.py  test_service.py  test_simulator.py  test_task_config_strategy_risk.py  test_trading_utils.py  test_tushare_provider.py
weights/: README.md
(+19 files in other folders)
