[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullstackautoquant"
version = "0.1.0"
description = "End-to-End Deep Learning Quantitative Trading System"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Zizhao Huang", email = "zizhaohuang26@gmail.com"},
]
keywords = [
    "quantitative-trading",
    "deep-learning",
    "stock-ranking",
    "automated-trading",
    "risk-management",
    "backtesting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "pyqlib>=0.9.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "h5py>=3.0",
    "python-dotenv>=1.0",
    "tushare>=1.3",
]

[project.optional-dependencies]
trading = [
    "gmtrade",
]
webui = [
    "streamlit>=1.20",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]
all = [
    "fullstackautoquant[trading,webui,dev]",
]

[project.urls]
Homepage = "https://github.com/Zizhao-HUANG/FullStackAutoQuant"
Repository = "https://github.com/Zizhao-HUANG/FullStackAutoQuant"
Issues = "https://github.com/Zizhao-HUANG/FullStackAutoQuant/issues"

# ======================== Tool Configuration ========================

[tool.setuptools.packages.find]
include = ["fullstackautoquant*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["fullstackautoquant"]
skip = [".git", "__pycache__", "tmp", "logs"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["fullstackautoquant", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
]
ignore = [
    "E203",
    "E266",
    "E501",   # line-too-long (black handles code formatting)
    "E402",   # module-level import not at top (intentional for sys.path setup)
    "SIM105", # suppressible-exception (contextlib.suppress less readable for these cases)
    "SIM108", # if-else-block-instead-of-if-exp (readability)
    "SIM102", # collapsible-if (readability in symbol normalization)
    "SIM115", # open-file-with-context-handler (NamedTemporaryFile pattern)
    "B023",   # function-uses-loop-variable (inner helpers in iteration)
    "B904",   # raise-without-from-inside-except (mixed re-raise patterns)
]

[tool.ruff.lint.per-file-ignores]
"fullstackautoquant/trading/strategy.py" = ["F401"]  # imports used at runtime via fallback
"fullstackautoquant/trading/execution.py" = ["F841"]  # variables kept for documentation
"tests/test_backtest_engine.py" = ["B009"]  # getattr with constant needed for dynamic import
"fullstackautoquant/webui/app/services/__init__.py" = ["F401", "UP035"]  # re-exports for downstream

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["fullstackautoquant/model/factors/"]

# Disable error codes that produce excessive noise in mixed typed/untyped codebases
disable_error_code = [
    "no-redef",          # try/except import fallback patterns
    "annotation-unchecked",  # unchecked annotations in untyped functions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
